fix: adjust manual dependency installation because of Java preview feature